force-app/main/default/objects/Carrier__c/Carrier__c.object-meta.xml
<CustomObject>
    <description>Freight carriers that KWB works with. Includes FMCSA verification data.</description>
    <externalDataSource></externalDataSource>
    <externalRepository>false</externalRepository>
    <isTranslatable>false</isTranslatable>
    <label>Carrier</label>
    <nameField>
        <label>Carrier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carriers</pluralLabel>
    <quickActionList>
        <quickAction>FeedItem.ContentPost</quickAction>
        <quickAction>FeedItem.ContentNote</quickAction>
        <quickAction>FeedItem.LinkPost</quickAction>
    </quickActionList>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>