force-app/main/default/objects/Carrier__c/fields/Active_Equipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Equipment_Count__c</fullName>
    <description>Number of active (available) pieces of equipment</description>
    <label>Active Equipment Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>