force-app/main/default/objects/Carrier__c/fields/Average_Equipment_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Average_Equipment_Utilization__c</fullName>
    <description>Average percentage of fleet utilization (0-100%)</description>
    <label>Average Equipment Utilization</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>