force-app/main/default/objects/Carrier__c/fields/BASIC_Inspection_Count__c.field-meta.xml
<CustomField>
    <fullName>BASIC_Inspection_Count__c</fullName>
    <description>BASIC Inspection Count from FMCSA safety data</description>
    <label>BASIC Inspection Count</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>