force-app/main/default/objects/Carrier__c/fields/Critical_Violations_Count__c.field-meta.xml
<CustomField>
    <fullName>Critical_Violations_Count__c</fullName>
    <description>Critical Violations Count from FMCSA safety data</description>
    <label>Critical Violations Count</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>