force-app/main/default/objects/Carrier__c/fields/CSA_Score__c.field-meta.xml
<CustomField>
    <fullName>CSA_Score__c</fullName>
    <description>CSA Score from FMCSA safety data</description>
    <label>CSA Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>