force-app/main/default/objects/Carrier__c/fields/DOT_Status__c.field-meta.xml
<CustomField>
    <fullName>DOT_Status__c</fullName>
    <description>DOT authority status from FMCSA</description>
    <label>DOT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Out of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>