force-app/main/default/objects/Carrier__c/fields/Equipment_Types__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Types__c</fullName>
    <description>Types of equipment carrier operates</description>
    <label>Equipment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
                <label>Van (Dry)</label>
            </value>
            <value>
                <fullName>Reefer</fullName>
                <label>Refrigerated (Reefer)</label>
            </value>
            <value>
                <fullName>Tank</fullName>
                <label>Tank/Tanker</label>
            </value>
            <value>
                <fullName>Dump</fullName>
            </value>
            <value>
                <fullName>Specialized</fullName>
                <label>Specialized (Heavy)</label>
            </value>
            <value>
                <fullName>Container</fullName>
                <label>Container/Intermodal</label>
            </value>
            <value>
                <fullName>Lowboy</fullName>
            </value>
            <value>
                <fullName>Step_Deck</fullName>
                <label>Step Deck</label>
            </value>
            <value>
                <fullName>Auto_Transport</fullName>
                <label>Auto Transport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>