force-app/main/default/objects/Carrier__c/fields/FMCSA_Verified__c.field-meta.xml
<CustomField>
    <fullName>FMCSA_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkmark that FMCSA verification succeeded</description>
    <label>FMCSA Verified</label>
    <type>Checkbox</type>
</CustomField>