force-app/main/default/objects/Carrier__c/fields/Insurance_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiration__c</fullName>
    <description>Date when carrier liability insurance expires</description>
    <label>Insurance Expiration</label>
    <type>Date</type>
</CustomField>