force-app/main/default/objects/Carrier__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <description>FMCSA-verified insurance status</description>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>