force-app/main/default/objects/Carrier__c/fields/MC_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_Number__c</fullName>
    <description>Motor Carrier (MC) number from FMCSA</description>
    <externalId>true</externalId>
    <label>MC Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>