force-app/main/default/objects/Carrier__c/fields/On_Time_Percent__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Percent__c</fullName>
    <description>Historical percentage of on-time deliveries (0-100%)</description>
    <label>On Time Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>