force-app/main/default/objects/Carrier__c/fields/Serious_Violations_Count__c.field-meta.xml
<CustomField>
    <fullName>Serious_Violations_Count__c</fullName>
    <description>Serious Violations Count from FMCSA safety data</description>
    <label>Serious Violations Count</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>