force-app/main/default/objects/Carrier__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <description>States/regions where carrier operates</description>
    <label>Service Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OH</fullName>
                <label>Ohio</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Indiana</label>
            </value>
            <value>
                <fullName>KY</fullName>
                <label>Kentucky</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Pennsylvania</label>
            </value>
            <value>
                <fullName>WV</fullName>
                <label>West Virginia</label>
            </value>
            <value>
                <fullName>VA</fullName>
                <label>Virginia</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>North Carolina</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>South Carolina</label>
            </value>
            <value>
                <fullName>TX</fullName>
                <label>Texas</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>Louisiana</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>Mississippi</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>Georgia</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>Florida</label>
            </value>
            <value>
                <fullName>TN</fullName>
                <label>Tennessee</label>
            </value>
            <value>
                <fullName>IL</fullName>
                <label>Illinois</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>Michigan</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>California</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <label>Nevada</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Arizona</label>
            </value>
            <value>
                <fullName>UT</fullName>
                <label>Utah</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colorado</label>
            </value>
            <value>
                <fullName>WY</fullName>
                <label>Wyoming</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>Montana</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>Idaho</label>
            </value>
            <value>
                <fullName>WA</fullName>
                <label>Washington</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <label>Oregon</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>