force-app/main/default/objects/Carrier__c/fields/Typical_Rate__c.field-meta.xml
<CustomField>
    <fullName>Typical_Rate__c</fullName>
    <description>Typical rate charged by carrier (used for margin estimation)</description>
    <label>Typical Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>