force-app/main/default/objects/Carrier__c/fields/USDOT_Number__c.field-meta.xml
<CustomField>
    <fullName>USDOT_Number__c</fullName>
    <description>US DOT number from FMCSA</description>
    <label>US DOT Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>